--- a/package.json
+++ b/package.json
@@ -35,38 +35,38 @@
   },
   "homepage": "https://github.com/mariuszfoltak/angular2-datatable#readme",
   "devDependencies": {
-    "@angular/core": "^2.1.0",
-    "@angular/compiler": "^2.1.0",
-    "@angular/common": "^2.1.0",
-    "@angular/platform-browser": "^2.1.0",
-    "@angular/platform-browser-dynamic": "^2.1.0",
-    "@angular/compiler-cli": "^2.1.0",
+    "@angular/common": "^4.3.6",
+    "@angular/compiler": "^4.3.6",
+    "@angular/compiler-cli": "^4.3.6",
+    "@angular/core": "^4.3.6",
+    "@angular/platform-browser": "^4.3.6",
+    "@angular/platform-browser-dynamic": "^4.3.6",
+    "@types/jasmine": "^2.5.35",
+    "@types/lodash": "^4.14.74",
     "core-js": "^2.4.1",
-    "http-server": "^0.9.0",
+    "http-server": "^0.10.0",
     "jasmine-core": "^2.4.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2",
-    "lodash": "^4.0.0",
+    "lodash": "^4.14.74",
     "phantomjs-prebuilt": "^2.1.7",
-    "remap-istanbul": "^0.7.0",
-    "rxjs": "5.0.0-beta.12",
-    "systemjs": "^0.19.39",
-    "typescript": "~2.1.0",
-    "zone.js": "^0.6.25",
+    "remap-istanbul": "^0.9.5",
     "rimraf": "^2.5.4",
-    "@types/lodash": "ts2.0",
-    "@types/jasmine": "^2.5.35"
+    "rxjs": "5.4.3",
+    "systemjs": "^0.20.18",
+    "typescript": "~2.5.2",
+    "zone.js": "^0.8.17"
   },
   "dependencies": {
-    "lodash": "^4.0.0"
+    "lodash": "^4.14.74"
   },
   "peerDependencies": {
-    "@angular/core": "^2.0.0",
-    "@angular/common": "^2.0.0",
-    "@angular/platform-browser": "^2.0.0",
+    "@angular/core": "^4.3.6",
+    "@angular/common": "^4.3.6",
+    "@angular/platform-browser": "^4.3.6",
     "rxjs": "^5.0.0-beta.12"
   }
 }
