--- a/package.json
+++ b/package.json
@@ -67,6 +67,6 @@
     "@angular/core": "^4.3.6",
     "@angular/common": "^4.3.6",
     "@angular/platform-browser": "^4.3.6",
-    "rxjs": "^5.0.0-beta.12"
+    "rxjs": "^5.4.3"
   }
 }
